Bug 131759 - "Split table" dialog doesn't remember the previously selected option
Summary: "Split table" dialog doesn't remember the previously selected option
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.4.2.2 release
Hardware: All All
: low minor
Assignee: Andreas Heinisch
URL:
Whiteboard: target:7.6.0
Keywords:
Depends on:
Blocks: Cell-Management Dialog-Remember-Settings
  Show dependency treegraph
 
Reported: 2020-03-31 23:18 UTC by Kenneth Hanson
Modified: 2023-05-05 15:06 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kenneth Hanson 2020-03-31 23:18:06 UTC
Description:
Sometimes it is necessary to split a large table repeatedly, in my case usually with no heading. At present, the user must select the correct radio button every time. It would be helpful if LO remembered the previously selected option, at least as long as the program is open.

This would be a minor convenience, but should have no downsides, and hopefully be easy to code.

There may be other places in the interface where a similar treatment would be desirable.

Steps to Reproduce:
n/a

Actual Results:
n/a

Expected Results:
n/a


Reproducible: Always


User Profile Reset: No



Additional Info:
n/a
Comment 1 Dieter 2020-04-04 10:49:18 UTC
I confirm the described behaviour with

Version: 7.0.0.0.alpha0+ (x64)
Build ID: 41177730421f9be9ad955766a5a19667d8003b11
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: default; VCL: win; 
Locale: de-DE (de_DE); UI-Language: en-GB
Calc: threaded

Tt should be the normal behaviour that LO remembers previous settings. So we can treat it as a bug.
Comment 2 QA Administrators 2022-04-05 03:50:48 UTC Comment hidden (noise)
Comment 3 Dieter 2022-04-05 07:05:48 UTC
Still present in

Version: 7.3.2.2 (x64) / LibreOffice Community
Build ID: 49f2b1bff42cfccbd8f788c8dc32c1c309559be0
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: zh-CN (de_DE); UI: en-GB
Calc: CL
Comment 4 Commit Notification 2023-05-05 13:35:48 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a86cbb0da80e0e05c041a8ddbd8e16df47638c73

tdf#131759 - Remember last used option in split table dialog

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 BogdanB 2023-05-05 15:06:19 UTC
I checked. It's perfect. The split checkbox is remembered.
I closed LO, open again, it is remembered (not per session).

Verified with
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 61c06d531171c079a032097e00b9602a192cbd1f
CPU threads: 16; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded