tdf#131759 - Remember last used option in split table dialog

Change-Id: Id7aaa300babff988f0244d822860d455d57c86c0
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151160
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>